--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,108 +1,80 @@
+@import "./colors.css";
+
 * {
-	border: none;
-	border-radius: 0;
-	font-weight: bold;
-	font-size: 14px;
-	min-height: 0;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 window#waybar {
-	background: rgba(21, 18, 27, 0);
-	color: #cdd6f4;
+  background: @base;
+  color: @text;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  border-radius: 0px 0px 15px 15px;
+  transition-duration: 0.5s;
+
+  border-bottom-width: 5px;
+  border-bottom-color: @pine;
+  border-bottom-style: solid;
 }
 
-#workspaces button {
-	padding: 5px;
-	color: #eba0ac;
-	margin-right: 5px;
-}
-
-#workspaces button.active {
-	color: #a6adc8;
-}
-
-#workspaces button.focused {
-  color: #a6adc8;
-  background: #eba0ac;
-  border-radius: 10px;
-}
-
-#workspaces button.urgent {
-  color: #11111b;
-  background: #a6e3a1;
-  border-radius: 10px;
-}
-
-#workspaces button:hover {
-  color: #cdd6f4;
-  background: #11111b;
-  border-radius: 10px;
-}
-
-#window,
+#custom-launcher,
 #clock,
+#clock-date,
+#workspaces,
 #pulseaudio,
 #network,
-#cpu,
+#tray,
 #memory,
-#workspaces,
-#tray {
-  background: #1e1e2e;
-  padding: 0px 10px;
-  margin: 3px 0px;
-  margin-top: 5px;
-}
+#cpu,
+#custom-powermenu {
+  background-color: @overlay;
+  color: @text;
 
-#tray {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 7px;
+  margin-bottom: 12px;
   border-radius: 10px;
-  margin-right: 10px;
+
+  border-bottom-width: 5px;
+  border-bottom-color: @surface;
+  border-bottom-style: solid;
 }
 
 #workspaces {
-  background: #1e1e2e;
+  padding: 0;
+}
+
+#workspaces button.active {
+  background-color: @love;
+  color: @base;
+
   border-radius: 10px;
-  margin-left: 10px;
-  padding-right: 0px;
-  padding-left: 5px;
+  margin-bottom: -5px;
+
+  border-bottom-width: 5px;
+  border-bottom-color: @subtle;
+  border-bottom-style: solid;
 }
 
-#window {
-  border-radius: 10px;
-  margin-left: 60px;
-  margin-right: 60px;
+#custom-launcher {
+  background-color: @gold;
+  color: @base;
+  border-bottom-color: @subtle;
+
+  margin-left: 15px;
+  padding-left: 20px;
+  padding-right: 21px;
 }
 
-#cpu {
-  border-radius: 0px 10px 10px 0px;
-  margin-right: 10px;
-}
+#custom-powermenu {
+  background-color: @foam;
+  color: @base;
+  border-bottom-color: @subtle;
 
-#memory {
-  border-radius: 10px 0px 0px 10px;
-}
-
-#network {
-  color: #a6adc8;
-  border-radius: 10px 0px 0px 10px;
-}
-
-#pulseaudio {
-  color: #a6adc8;
-  border-left: 0px;
-  border-right: 0px;
-}
-
-#pulseaudio.microphone {
-  color: #a6adc8;
-  border-radius: 0px 10px 10px 0px;
-  border-left: 0px;
-  border-right: 0px;
-  margin-right: 5px;
-}
-
-#clock {
-  color: #a6adc8;
-  border-radius: 10px 10px 10px 10px;
-  margin-left: 5px;
-  border-right: 0px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding-left: 20px;
+  padding-right: 23px;
 }
